syntax = "proto3";

package chat;

option go_package = "./pb";

service ChatService {
  rpc StreamChat (ChatRequest) returns (stream ChatResponse) {}
}

message Message {
  string role = 1;
  string content = 2;
}

message ChatRequest {
  repeated Message messages = 1;
  string model = 2;
}

message ChatResponse {
  string chunk = 1;
  // Optional: add thinking/reasoning field if the model supports it separately
  string thinking = 2; 
}
